[metadata]
name = lovelace
version = 0.1.0
author = Blyth Laiman Karl
description = Lovelace scripting language interpreter and runner
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pinkwolf12321.github.io/lovelace-website/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = lovelace
python_requires = >=3.12
include_package_data = True
